@@ -28,6 +28,8 @@ PIG-3174:  Remove rpm and deb artifacts from build.xml (gates)
 
 IMPROVEMENTS
 
+PIG-3162: PigTest.assertOutput doesn't allow non-default delimiter (dreambird via cheolsoo)
+
 PIG-3002: Pig client should handle CountersExceededException (jarcec via billgraham)
 
 PIG-3189: Remove ivy/pig.pom and improve build mvn targets (billgraham)
